--- a/article/VII_stereo_seq/stereo_seq_analysis.ipynb
+++ b/article/VII_stereo_seq/stereo_seq_analysis.ipynb
@@ -8,19 +8,9 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd\n",
     "import scanpy as sc\n",
-    "from tqdm import tqdm\n",
-    "import seaborn as sns\n",
-    "import matplotlib as mpl\n",
-    "import archetypes as arch\n",
     "import matplotlib.pyplot as plt\n",
-    "from scipy.stats import entropy\n",
-    "from scipy.stats import pearsonr\n",
-    "import sklearn.metrics as metrics\n",
-    "from scipy.spatial.distance import cdist\n",
-    "from scipy.spatial.distance import jensenshannon\n",
-    "from scipy.cluster.hierarchy import linkage, leaves_list"
+    "from scipy.spatial.distance import cdist"
    ]
   },
   {
